@@ -28,6 +28,7 @@ Improved ZX Vision:
 
 Improved ZX Desktop:
 - Allow to set parameters when redefining upper buttons, for some actions like openwindow or set machine
+- Allow to reconfigure upper buttons by right clicking over them
 
 * Fixes:
 
